@@ -1,7 +1,6 @@
 package ru.job4j.collection.controltask;
 
 import org.junit.Test;
-import java.util.Arrays;
 import java.util.List;
 import static org.hamcrest.Matchers.is;
 import static org.junit.Assert.assertThat;
@@ -9,7 +8,7 @@ import static org.junit.Assert.assertThat;
 public class DepartmentsTest {
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList(
+        List<String> input = List.of(
                 "k1/sk1",
                 "k1/sk1/ssk1",
                 "k1/sk1/ssk2",
@@ -18,7 +17,7 @@ public class DepartmentsTest {
                 "k2/sk1/ssk1",
                 "k2/sk1/ssk2"
         );
-        List<String> expect = Arrays.asList(
+        List<String> expect = List.of(
                 "k1",
                 "k1/sk1",
                 "k1/sk1/ssk1",
@@ -36,8 +35,8 @@ public class DepartmentsTest {
 
     @Test
     public void whenNonChange() {
-        List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> input = List.of("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortAsc(result);
         assertThat(result, is(expect));
